rust/macros/tests/invalid/target/rls/debug/deps/single_argument_rs-aadbbbb6233bc6da.d
e:\playground\Exercism Solutions\rust\macros\tests\invalid\target\rls\debug\deps\single_argument_rs-aadbbbb6233bc6da.rmeta: single-argument.rs

e:\playground\Exercism Solutions\rust\macros\tests\invalid\target\rls\debug\deps\single_argument_rs-aadbbbb6233bc6da.d: single-argument.rs

single-argument.rs:
